Styles: Prevent reveal modal from gaining outline on mobile
A jarring outline was displayed around the modal on mobile whenever it was
open. This has been removed.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -368,6 +368,10 @@ input:disabled, textarea:disabled {
   border: 1px solid var(--primary-border-color);
 }
 
+[data-whatinput="touch"] .reveal {
+  outline: 0;
+}
+
 /* -----------------------------------
     FOOTER
 ----------------------------------- */
